--- a/CardioHealth/TabBarControllers/Profile/APHProfile.storyboard
+++ b/CardioHealth/TabBarControllers/Profile/APHProfile.storyboard
@@ -100,7 +100,7 @@
                             </variation>
                         </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="Y4L-7g-Sui">
-                            <rect key="frame" x="0.0" y="349" width="320" height="245"/>
+                            <rect key="frame" x="0.0" y="506" width="320" height="181"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rTF-jz-l4B">
@@ -136,8 +136,8 @@
                                         <constraint firstItem="zJL-bp-TQa" firstAttribute="leading" secondItem="rTF-jz-l4B" secondAttribute="leading" constant="8" id="woE-Vo-Ixo"/>
                                     </constraints>
                                 </view>
-                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WyR-pr-jY3">
-                                    <rect key="frame" x="0.0" y="117" width="74" height="65"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WyR-pr-jY3">
+                                    <rect key="frame" x="0.0" y="117" width="160" height="65"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="65" id="p0H-Dv-Z1R"/>
@@ -162,20 +162,6 @@
                                         <action selector="leaveStudy:" destination="wjS-Qi-tyf" eventType="touchUpInside" id="taf-Pv-g84"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dzV-Zz-fEh">
-                                    <rect key="frame" x="0.0" y="182" width="320" height="64"/>
-                                    <color key="backgroundColor" red="0.01176470588" green="0.62352941179999999" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="64" id="eP2-V8-RSp"/>
-                                    </constraints>
-                                    <state key="normal" title="Review Consent">
-                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="reviewConsent:" destination="wjS-Qi-tyf" eventType="touchUpInside" id="d0I-kR-5Yv"/>
-                                    </connections>
-                                </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currently Participating In" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bf4-sW-Pzo">
                                     <rect key="frame" x="8" y="8" width="304" height="21"/>
                                     <constraints>
@@ -194,12 +180,9 @@
                                 <constraint firstItem="WyR-pr-jY3" firstAttribute="top" secondItem="Y4L-7g-Sui" secondAttribute="top" constant="117" id="F7T-p8-zTJ"/>
                                 <constraint firstAttribute="trailing" secondItem="tyV-CG-jBW" secondAttribute="trailing" id="Ibd-Xt-IFS"/>
                                 <constraint firstItem="rTF-jz-l4B" firstAttribute="top" secondItem="Y4L-7g-Sui" secondAttribute="top" constant="40" id="Klt-bH-86Y"/>
-                                <constraint firstAttribute="trailing" secondItem="dzV-Zz-fEh" secondAttribute="trailing" id="RUI-TM-71R"/>
                                 <constraint firstAttribute="trailing" secondItem="bf4-sW-Pzo" secondAttribute="trailing" constant="8" id="U4S-Cy-VxF"/>
-                                <constraint firstItem="dzV-Zz-fEh" firstAttribute="leading" secondItem="Y4L-7g-Sui" secondAttribute="leading" id="Ww1-Kp-Ofv"/>
                                 <constraint firstItem="bf4-sW-Pzo" firstAttribute="top" secondItem="Y4L-7g-Sui" secondAttribute="top" constant="8" id="bYA-bk-5H3"/>
                                 <constraint firstItem="WyR-pr-jY3" firstAttribute="trailing" secondItem="tyV-CG-jBW" secondAttribute="leading" constant="-1" id="cuh-Ub-jDC"/>
-                                <constraint firstAttribute="bottom" secondItem="dzV-Zz-fEh" secondAttribute="bottom" constant="-1" id="f6j-fZ-AoR"/>
                                 <constraint firstAttribute="trailing" secondItem="rTF-jz-l4B" secondAttribute="trailing" id="gg1-yq-c6F"/>
                                 <constraint firstItem="WyR-pr-jY3" firstAttribute="leading" secondItem="Y4L-7g-Sui" secondAttribute="leading" id="ij0-Xh-GeV"/>
                                 <constraint firstItem="rTF-jz-l4B" firstAttribute="leading" secondItem="Y4L-7g-Sui" secondAttribute="leading" id="jJY-5Y-zqh"/>
@@ -267,8 +250,8 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="kph-Xf-8dd">
-                                            <rect key="frame" x="132" y="23" width="174" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="kph-Xf-8dd">
+                                            <rect key="frame" x="132" y="22" width="174" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="cFP-MC-EAh"/>
                                             </constraints>
@@ -356,7 +339,6 @@
                         <outlet property="lastNameTextField" destination="K3a-vc-OyO" id="CZI-jI-ELa"/>
                         <outlet property="leaveStudyButton" destination="tyV-CG-jBW" id="ErX-S5-7v4"/>
                         <outlet property="profileImageButton" destination="5OO-kY-iTa" id="AYP-6e-72F"/>
-                        <outlet property="reviewConsentButton" destination="dzV-Zz-fEh" id="vBc-QK-AB9"/>
                         <outlet property="rightBarButton" destination="ZR8-Yo-nVe" id="O8m-aP-v7L"/>
                         <outlet property="signOutButton" destination="WyR-pr-jY3" id="63V-TN-xYX"/>
                     </connections>
@@ -560,6 +542,35 @@
             </objects>
             <point key="canvasLocation" x="1674" y="483"/>
         </scene>
+        <!--Withdrawal-->
+        <scene sceneID="H3y-9d-ZxN">
+            <objects>
+                <viewController id="6NT-Rj-qby" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vMS-ES-zWu"/>
+                        <viewControllerLayoutGuide type="bottom" id="zFx-GB-OHI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="InU-Vr-nie">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="zQp-aC-BbK">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Withdrawal" id="8mD-wd-IwA">
+                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="8jS-ck-eeN"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A7M-0w-HhY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2576" y="1168"/>
+        </scene>
         <!--Change Passcode-->
         <scene sceneID="wyG-SU-neg">
             <objects>
@@ -655,6 +666,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1W8-DC-Y0q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2186" y="486"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="97h-IY-cVV">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="opj-av-SCT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fpX-gX-JeQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6NT-Rj-qby" kind="relationship" relationship="rootViewController" id="dAp-TY-7Tg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="buY-E9-4Pa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2186" y="1168"/>
         </scene>
     </scenes>
     <resources>
